--- a/api1/src/main/resources/application.properties
+++ b/api1/src/main/resources/application.properties
@@ -1,10 +1,3 @@
-server.port=9090
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
-
-eureka.client.service-url.defaultZone=${EUREKA_URI}:http://localhost:8989/eureka
-eureka.instance.prefer-ip-address=true
+server.port=8585
+api2base-url = http://localhost/
+api3base-url = http://localhost/
