--- a/api1/src/main/resources/application.properties
+++ b/api1/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=8585
-api2base-url = http://localhost/
-api3base-url = http://localhost/
+api2base-url = ${API2_BASE_HOST:http://localhost:9090}
+api3base-url = ${API3_BASE_HOST:http://localhost/}
