--- a/api1/src/main/resources/application.properties
+++ b/api1/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-server.port=8585
+server.port=9595
 api2base-url = http://localhost/
-api3base-url = http://localhost/
+api3base-url = https://jsonplaceholder.typicode.com/
