fixing api2, mysql server redis

--- a/api1/src/main/resources/application.properties
+++ b/api1/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 server.port=9595
-api2base-url = http://localhost/
-api3base-url = https://jsonplaceholder.typicode.com/
+api2base-url=${API2_BASE_URL}
+redis-db-host=${REDIS_DB_HOST}
+eureka.client.service-url.defaultZone=${EUREKA_SERVICE_URL}/eureka/}
+eureka.instance.hostname=${API1_HOST}
+eureka.instance.non-secure-port=8081
+eureka.instance.prefer-ip-address=true
+spring.application.name=api1-service
+
 
