--- a/api2/src/main/resources/application.properties
+++ b/api2/src/main/resources/application.properties
@@ -1,10 +1,22 @@
 server.port=9090
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASSWORD:root}
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/api1?createDatabaseIfNotExist=true&autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=root
+#spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 
-eureka.client.service-url.defaultZone=${EUREKA_URI}:http://localhost:8989/eureka
-eureka.instance.prefer-ip-address=true
+spring.datasource.hikari.connection-timeout: 30000
+spring.datasource.hikari.maximum-pool-size: 10
+spring.datasource.hikari.idle-timeout: 600000
+spring.datasource.hikari.minimum-idle: 10
+
+#logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
+#logging.level.com.zaxxer.hikari=TRACE
+
+#eureka.client.service-url.defaultZone=${EUREKA_URI}:http://localhost:8989/eureka
+#eureka.instance.prefer-ip-address=true
+#eureka.client.enabled=false
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
