--- a/compose.yml
+++ b/compose.yml
@@ -1,29 +1,59 @@
+version: '3'
 services:
-  api2:
-    build: api2
-    restart: always
-    environment:
-      - MYSQL_HOST: 127.0.0.1
-      - MYSQL_USER: root
-      - MYSQL_PASSWORD: root
+  redis-server:
+    image: redis:latest
     ports:
-      - 9090:9090
-  api1:
-    build: api1
-    restart: always
+      - "6379:6379"
+    networks:
+      - api1-networks
+  mysqldb:
+    image: mysql:8.1
+    networks:
+      - api1-networks
     environment:
-      - API2_BASE_HOST: http://127.0.0.1:9090
-      - API3_BASE_HOST: http://127.0.0.1
+        MYSQL_ROOT_PASSWORD: root
+        MYSQL_DATABASE: api1
+        MYSQL_TCP_PORT: 9906
     ports:
-      - 8585:8585
-    depends_on:
-      api2:
-        condition: service_healthy
+      - "9906:9906"
+    restart: always
   apigateway:
     build: apigateway
     restart: always
     ports:
-      - 8989:8989
+      - "8585:8585"
+    networks:
+      - api1-networks
+    environment:
+      EUREKA_INSTANCE_HOSTNAME: apigateway
+  api2:
+    build: api2
+    restart: always
+    environment:
+        MYSQL_HOST: mysqldb
+        MYSQL_PORT: 9906
+        MYSQL_USER: root
+        MYSQL_PASSWORD: root
+    ports:
+      - "9090:9090"
+    networks:
+      - api1-networks
     depends_on:
-      api1:
-        condition: service_healthy
+      - mysqldb
+  api1:
+    build: api1
+    restart: always
+    environment:
+      API2_BASE_URL: http://api2:9090
+      EUREKA_SERVICE_URL: http://apigateway:8585
+      API1_HOST: api1
+      REDIS_DB_HOST: redis-server
+    ports:
+      - "9595:9595"
+    networks:
+      - api1-networks
+    depends_on:
+      - api2
+      - redis-server
+networks:
+  api1-networks:
