--- a/apigateway/src/main/resources/application.properties
+++ b/apigateway/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=gateway
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
 eureka.server.waitTimeInMsWhenSyncEmpty=0
-spring.main.web-application-type=reactive
+#spring.main.web-application-type=reactive
 management.endpoint.web.exposure.include="*"
 eureka.instance.hostname=${EUREKA_INSTANCE_HOSTNAME:localhost}
 eureka.instance.secure-port=4443
