--- a/api1/src/main/resources/application.properties
+++ b/api1/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=9595
 api2base-url=${API2_BASE_URL}
-redis-db-host=${REDIS_DB_HOST}
-eureka.client.service-url.defaultZone=${EUREKA_SERVICE_URL}/eureka/}
-eureka.instance.hostname=${API1_HOST}
-eureka.instance.non-secure-port=8081
+redis-db-host=${REDIS_DB_HOST:localhost}
+eureka.instance.hostname=${EUREKA_HOSTNAME:localhost}
 eureka.instance.prefer-ip-address=true
 spring.application.name=api1-service
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:8585/eureka/
+
 
 
