--- a/apigateway/pom.xml
+++ b/apigateway/pom.xml
@@ -5,7 +5,9 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.12.RELEASE</version>
+<!--        <version>2.3.12.RELEASE</version>-->
+<!--        <version>2.5.15</version>-->
+        <version>2.7.16</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.assignment.streamworx</groupId>
@@ -16,9 +18,10 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-<!--        <spring-cloud.version>2021.0.8</spring-cloud.version>-->
-        <spring-cloud.version>Hoxton.SR12</spring-cloud.version>
+        <java.version>11</java.version>
+<!--        <spring-cloud.version>2020.0.6</spring-cloud.version>-->
+<!--        <spring-cloud.version>Hoxton.SR12</spring-cloud.version>-->
+        <spring-cloud.version>2021.0.8</spring-cloud.version>
     </properties>
     <dependencies>
         <dependency>
