--- a/apigateway/src/main/resources/application.properties
+++ b/apigateway/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 server.port=${SERVER_PORT:8585}
-spring.application.name=gateway
-eureka.client.registerWithEureka=false
-eureka.client.fetchRegistry=false
+eureka.instance.prefer-ip-address=true
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
 eureka.server.waitTimeInMsWhenSyncEmpty=0
-#spring.main.web-application-type=reactive
-management.endpoint.web.exposure.include="*"
 eureka.instance.hostname=${EUREKA_INSTANCE_HOSTNAME:localhost}
-eureka.instance.secure-port=4443
-eureka.instance.non-secure-port=8081
+#eureka.server.eviction-interval-timer-in-ms=1000
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+spring.application.name=API-GATEWAY
+spring.cloud.discovery.enabled=true
 
-eureka.client.serviceUrl.defaultZone=http://${EUREKA_INSTANCE_HOSTNAME:localhost}:${SERVER_PORT:8585}/eureka/
+logging.level.com.netflix.eureka=OFF
+logging.level.com.netflix.discovery=OFF
+
